Harmonize/Upgrade Java version to 21