@@ -59,7 +59,7 @@
         <maven-surefire-plugin.version>3.2.3</maven-surefire-plugin.version>
         <mockito.version>5.8.0</mockito.version>
         <google.truth.version>1.2.0</google.truth.version>
-        <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
         <maven-failsafe-plugin.version>3.0.0-M6</maven-failsafe-plugin.version>
     </properties>
 
@@ -256,6 +256,7 @@
                     <argLine>${argLine} --add-opens
                         java.base/java.lang.reflect=ALL-UNNAMED --add-exports
                         java.base/sun.nio.ch=ALL-UNNAMED
+                        -XX:+EnableDynamicAgentLoading <!-- https://openjdk.org/jeps/451 -->
                     </argLine>
                     <reuseForks>false</reuseForks>
                     <forkCount>1</forkCount>
